--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1067622216494
 REACT_APP_FIREBASE_APP_ID=1:1067622216494:web:243bf65c993b851f1dc0bf
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-CQVSF1VZ42
 
-# Backend API URL
+# Backend API URL (Update this with your deployed backend URL)
 REACT_APP_API_URL=http://localhost:8000
+# For production, use your deployed backend URL:
+# REACT_APP_API_URL=https://your-backend-domain.com
