--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=G-CQVSF1VZ42
 # Backend API URL (Update this with your deployed backend URL)
 REACT_APP_API_URL=http://localhost:8000
 # For production, use your deployed backend URL:
-# REACT_APP_API_URL=https://your-backend-domain.com
+REACT_APP_API_URL=https://dropout-back.onrender.com
