--- a/.env.production.example
+++ b/.env.production.example
@@ -1,11 +1,8 @@
 # Production Environment Variables for Vercel
 # Copy these to your Vercel dashboard -> Settings -> Environment Variables
 
-# Backend API URL - IMPORTANT: Update this with your actual backend URL
-REACT_APP_API_URL=https://your-backend-domain.herokuapp.com
-# Or if using Railway, Render, or other platforms:
-# REACT_APP_API_URL=https://your-backend.railway.app
-# REACT_APP_API_URL=https://your-backend.onrender.com
+# Backend API URL - IMPORTANT: Your deployed backend URL
+REACT_APP_API_URL=https://dropout-back.onrender.com
 
 # Firebase Configuration
 REACT_APP_FIREBASE_API_KEY=AIzaSyBSrFNuIbTk2khv-qO-lxhQ3IuRcVrwO2k
